<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#FFFFFF" android:isScrollContainer="true">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:isScrollContainer="true" >

        <WebView
            android:id="@+id/webView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true" />

    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal" >

        <MultiAutoCompleteTextView
            android:id="@+id/editText1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:ems="10"
            android:inputType="text|textFilter"
            android:isScrollContainer="false"
            android:keepScreenOn="true"
            android:maxLines="1"
            android:selectAllOnFocus="true" />

        <Button
            android:id="@+id/enterB"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter" />

    </LinearLayout>

</LinearLayout>
